<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/m_frg_nsv"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <GridLayout

            style="@style/maingride"
            android:columnCount="2"
            android:rowCount="4">
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/ht"
                android:text="@string/ht"/>
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/gz"
                android:text="@string/gz"/>
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/sx"
                android:text="@string/sx"/>
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/sc"
                android:text="@string/sc"/>
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/mp"
                android:text="@string/mp"/>
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/cz"
                android:text="@string/cz"/>
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/yq"
                android:text="@string/yq"/>
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/zs"
                android:text="@string/zs"/>
        </GridLayout>
        <View
            android:id="@+id/grid_one"
            style="@style/fen_ge_xian_horizontal"
            android:layout_marginBottom="10dp"/>
        <TextView
            style="@style/maintitle"
            android:text="@string/bz"/>
        <GridLayout
            style="@style/maingride"
            android:columnCount="2"
            android:rowCount="2">
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/bdlb"
                android:text="@string/bdlb"/>
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/tbgxst"
                android:text="@string/tbgxst"/>
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/jfqk"
                android:text="@string/jfqk"/>
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/bdfx"
                android:text="@string/bdfx"/>
        </GridLayout>
        <View
            android:id="@+id/grid_two"
            style="@style/fen_ge_xian_horizontal"
            android:layout_marginBottom="10dp"/>
        <TextView
            style="@style/maintitle"
            android:text="@string/sq"/>
        <GridLayout
            style="@style/maingride"
            android:columnCount="2"
            android:rowCount="2">
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/fcsq"
                android:text="@string/fcsq"/>
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/jssq"
                android:text="@string/jssq"/>
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/bzhk"
                android:text="@string/bzhk"/>
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/bdsbjd"
                android:text="@string/bdsbjd"/>
        </GridLayout>
        <View
            android:id="@+id/grid_three"
            style="@style/fen_ge_xian_horizontal"
            android:layout_marginBottom="10dp"/>
        <TextView
            style="@style/maintitle"
            android:text="@string/zc"/>
        <GridLayout
            style="@style/maingride"
            android:columnCount="2"
            android:rowCount="2">
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/zjh"
                android:text="@string/zjh"/>
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/yhq"
                android:text="@string/yhq"/>
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/bdd"
                android:text="@string/bdd"/>
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/njtq"
                android:text="@string/njtq"/>
        </GridLayout>
        <View
            android:id="@+id/grid_four"
            style="@style/fen_ge_xian_horizontal"
            android:layout_marginBottom="10dp"/>
        <TextView
            style="@style/maintitle"
            android:text="@string/lp"/>
        <GridLayout
            style="@style/maingride">
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/rsx"
                android:text="@string/rsxlpyg"/>
            <TextView
                style="@style/main_gride"
                android:drawableStart="@drawable/cx"
                android:text="@string/cxlpyg"/>
        </GridLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>