<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/tool_bar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <RadioGroup
            android:id="@+id/frg_index_ps_rg"
            android:padding="5dp"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:padding="5dp"
                android:background="@drawable/ps_activity_rb_left_bg"
                android:id="@+id/frg_index_ps_rb_albc"
                android:textColor="@color/validata_btn"
                android:textSize="14sp"
                android:text="@string/ps_albc"
                android:button="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:padding="5dp"
                android:background="@drawable/ps_activity_rb_right_bg"
                android:id="@+id/frg_index_ps_rb_agsc"
                android:textColor="@color/validata_btn"
                android:textSize="14sp"
                android:text="@string/ps_agsc"
                android:button="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>
        <ImageButton
            android:background="@null"
            android:id="@+id/frg_index_ps_search"
            android:layout_marginEnd="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"/>
    </RelativeLayout>
    <View style="@style/fen_ge_xian_horizontal"/>
    <FrameLayout
        android:id="@+id/frg_index_ps_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>