<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/tool_bar"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:baselineAligned="false">
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textSize="21sp"
                android:drawablePadding="5dp"
                android:text="@string/money"
                android:drawableStart="@drawable/money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textSize="21sp"
                android:drawablePadding="5dp"
                android:text="@string/integral"
                android:drawableStart="@drawable/integral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
               android:layout_marginLeft="20dp"
                android:textColor="#FCFEFD"
                android:padding="5dp"
                android:background="@drawable/exchange"
                android:textSize="14sp"
                android:gravity="center"
                android:text="@string/exchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_height="6dp"
        android:layout_width="match_parent"
        android:background="#F1F1F1"/>
    <android.support.design.widget.TabLayout
        app:tabMode="fixed"
        android:id="@+id/mall_frg_tab"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>
        <android.support.v4.view.ViewPager
            android:id="@+id/mall_frg_vp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
</LinearLayout>