<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/tool_bar"/>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_margin="25dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <EditText
                    android:layout_gravity="center"
                    android:theme="@style/EditTextBottomLine"
                    android:inputType="phone"
                    android:drawableLeft="@drawable/smartphone"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/narmal_phone_numbar"
                    android:hint="@string/phone_numbar_edit"
                    android:drawableRight="@drawable/cancel"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                >
                <EditText
                    android:inputType="number"
                    android:layout_gravity="center"
                    android:theme="@style/EditTextBottomLine"
                    android:drawableLeft="@drawable/padlock"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/narmal_login_possword"
                    android:hint="@string/validata_code"
                    android:drawableRight="@drawable/cancel"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <Button
            android:background="@drawable/login"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/toolBar"
            android:textSize="18sp"
            android:id="@+id/narmal_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast_login_btn"/>

        <TextView
            android:id="@+id/forget_pass_word_text"
            android:textColor="@color/narmal_login_forget_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="25dp"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="@id/narmal_login_btn"
            android:layout_alignParentRight="true"
            android:text="@string/narmal_login_forget_password"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_margin="25dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:checked="true"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/narmal_agreement_check_box"/>
            <ImageView
                android:id="@+id/narmal_agreement_check_image"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/agreement"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>