<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/tool_bar"/>
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolBar"
            android:fitsSystemWindows="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:background="@color/validata_btn"
                android:orientation="horizontal"
                app:layout_scrollFlags="scroll">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:contentDescription="@string/app_name"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/main_user"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:contentDescription="@string/app_name"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/main_group"/>
            </LinearLayout>
            <RadioGroup
                android:visibility="gone"
                android:background="#DCDCDC"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <RadioButton
                    android:checked="true"
                    android:background="@drawable/personal_bg"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:button="@null"
                    android:id="@+id/personal"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:text="@string/personal"
                   />
                <RadioButton
                    android:background="@drawable/workplace_bg"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:button="@null"
                    android:id="@+id/workplace"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:text="@string/workplace"
                    />
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal"
                app:layout_scrollFlags="scroll">
                <ImageView
                    style="@style/main_line"
                    android:src="@drawable/blue_line"
                    android:contentDescription="@string/app_name"/>
                <ImageView
                    style="@style/main_line"
                    android:src="@drawable/orange_line"
                    android:contentDescription="@string/app_name"/>
                <ImageView
                    android:contentDescription="@string/app_name"
                    style="@style/main_line"
                    android:src="@drawable/green_line"/>
                <ImageView
                    style="@style/main_line"
                    android:src="@drawable/red_line"
                    android:contentDescription="@string/app_name"/>
                <ImageView
                    android:contentDescription="@string/app_name"
                    style="@style/main_line"
                    android:src="@drawable/violet_line"/>
            </LinearLayout>

            <android.support.design.widget.TabLayout
                android:id="@+id/main_frg_tly"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:tabMode="fixed"/>
        </android.support.design.widget.AppBarLayout>
        <LinearLayout
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include layout="@layout/main_xx_frg"/>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>


</LinearLayout>